Add in requested changes

--- a/docmanager_backend/emails/templates/request_approved.html
+++ b/docmanager_backend/emails/templates/request_approved.html
@@ -10,7 +10,7 @@
   {% trans 'Please visit the site to check your request:' %}
   {{ url|safe }}
 
-  {% trans 'For hardcopy requests, please proceed to the USTP office to avail of your requested copies:' %}
+  {% trans 'For hardcopy requests, please proceed to the USTP office to avail of your requested copies. Hardcopy requests are valid only within 1 month of requesting.' %}
 {% endblock %}
 
 {% block html_body %}
@@ -27,6 +27,6 @@
   </p>
 
   <p>
-    {% trans 'For hardcopy requests, please proceed to the USTP office to avail of your requested copies:' %}
+    {% trans 'For hardcopy requests, please proceed to the USTP office to avail of your requested copies. Hardcopy requests are valid only within 1 month of requesting.' %}
   </p>
 {% endblock %}
