--- a/docmanager_backend/emails/templates/request_approved.html
+++ b/docmanager_backend/emails/templates/request_approved.html
@@ -7,6 +7,8 @@
 {% block text_body %}
   {% blocktrans %}You're receiving this email because your document request has been {{ request_status }}.{% endblocktrans %}
 
+  {% blocktrans %}Remarks: {{ remarks }}{% endblocktrans %}
+
   {% trans 'Please visit the site to check your request:' %}
   {{ url|safe }}
 
@@ -16,6 +18,10 @@
 {% block html_body %}
   <p>
     {% blocktrans %}You're receiving this email because your document request has been {{ request_status }}.{% endblocktrans %}
+  </p>
+
+  <p>
+    {% blocktrans %}Remarks {{ remarks }}{% endblocktrans %}
   </p>
 
   <p>
